--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "postcss-cli": "^11.0.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
